--- a/resources/package.json
+++ b/resources/package.json
@@ -21,7 +21,7 @@
     "forge": "./forge.config.js"
   },
   "dependencies": {
-    "@fastify/cors": "8.2.0",
+    "@fastify/cors": "10.0.1",
     "@logseq/rsapi": "0.0.84",
     "@sentry/electron": "2.5.1",
     "abort-controller": "3.0.0",
@@ -35,7 +35,7 @@
     "electron-squirrel-startup": "1.0.0",
     "electron-window-state": "5.0.3",
     "extract-zip": "2.0.1",
-    "fastify": "latest",
+    "fastify": "5.1.0",
     "fs-extra": "9.1.0",
     "https-proxy-agent": "7.0.2",
     "node-fetch": "2.6.7",
