--- a/resources/package.json
+++ b/resources/package.json
@@ -62,6 +62,9 @@
   "resolutions": {
     "**/electron": "31.7.5",
     "**/node-abi": "3.68.0",
-    "**/node-gyp": "10.0.1"
+    "**/node-gyp": "10.0.1",
+    "string-width": "^4.2.0",
+    "wrap-ansi": "^7.0.0",
+    "strip-ansi": "^6.0.1"
   }
 }
