--- a/.github/workflows/build-desktop-release.yml
+++ b/.github/workflows/build-desktop-release.yml
@@ -390,7 +390,7 @@ jobs:
 
   build-macos-x64:
     needs: [ compile-cljs ]
-    runs-on: macos-latest
+    runs-on: macos-13
 
     steps:
       - name: Download The Static Asset
@@ -466,7 +466,7 @@ jobs:
 
   build-macos-arm64:
     needs: [ compile-cljs ]
-    runs-on: macos-latest
+    runs-on: macos-13
 
     steps:
       - name: Download The Static Asset
