--- a/package.json
+++ b/package.json
@@ -113,7 +113,7 @@
         "d3-force": "3.0.0",
         "diff": "5.0.0",
         "dompurify": "2.4.0",
-        "electron": "28.3.1",
+        "electron": "31.7.5",
         "electron-dl": "3.3.0",
         "fs": "0.0.1-security",
         "fs-extra": "9.1.0",
@@ -170,6 +170,7 @@
         "pixi-graph-fork/@pixi/mesh": "6.2.0",
         "pixi-graph-fork/@pixi/settings": "6.2.0",
         "pixi-graph-fork/@pixi/mixin-get-child-by-name": "6.2.0",
-        "pixi-graph-fork/@pixi/math": "6.2.0"
+        "pixi-graph-fork/@pixi/math": "6.2.0",
+        "string-width": "4.2.3"
     }
 }
