--- a/package.json
+++ b/package.json
@@ -170,7 +170,6 @@
         "pixi-graph-fork/@pixi/mesh": "6.2.0",
         "pixi-graph-fork/@pixi/settings": "6.2.0",
         "pixi-graph-fork/@pixi/mixin-get-child-by-name": "6.2.0",
-        "pixi-graph-fork/@pixi/math": "6.2.0",
-        "string-width": "4.2.3"
+        "pixi-graph-fork/@pixi/math": "6.2.0"
     }
 }
