--- a/resources/package.json
+++ b/resources/package.json
@@ -25,7 +25,7 @@
     "@logseq/rsapi": "0.0.91",
     "@sentry/electron": "2.5.1",
     "abort-controller": "3.0.0",
-    "better-sqlite3": "9.3.0",
+    "better-sqlite3": "^11.7.0",
     "chokidar": "^3.5.1",
     "command-exists": "1.2.9",
     "diff-match-patch": "1.0.5",
