fix: Fix light/dark mode switching on Android
On Android `prefers-color-scheme` is well and truly broken. With
`capacitor-dark-mode` plugin `logseq` can achieve reliable light/dark
theme switching depending on the system theme across all platforms.

Fixes #11314

--- a/android/app/capacitor.build.gradle
+++ b/android/app/capacitor.build.gradle
@@ -9,6 +9,7 @@ android {
 
 apply from: "../capacitor-cordova-android-plugins/cordova.variables.gradle"
 dependencies {
+    implementation project(':aparajita-capacitor-dark-mode')
     implementation project(':capacitor-action-sheet')
     implementation project(':capacitor-app')
     implementation project(':capacitor-camera')
