feat(gauth): init gauth

--- a/package.json
+++ b/package.json
@@ -171,5 +171,6 @@
         "pixi-graph-fork/@pixi/settings": "6.2.0",
         "pixi-graph-fork/@pixi/mixin-get-child-by-name": "6.2.0",
         "pixi-graph-fork/@pixi/math": "6.2.0"
-    }
+    },
+    "packageManager": "yarn@1.22.22+sha1.ac34549e6aa8e7ead463a7407e1c7390f61a6610"
 }
