--- a/resources/package.json
+++ b/resources/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@fastify/cors": "8.2.0",
     "@logseq/rsapi": "0.0.91",
+    "@openid/appauth": "^1.3.2",
     "@sentry/electron": "2.5.1",
     "abort-controller": "3.0.0",
     "better-sqlite3": "^11.7.0",
@@ -50,9 +51,9 @@
     "@electron-forge/cli": "^7.3.1",
     "@electron-forge/maker-deb": "^7.3.1",
     "@electron-forge/maker-dmg": "^7.3.1",
-    "@electron-forge/maker-wix": "^7.3.1",
     "@electron-forge/maker-rpm": "^7.3.1",
     "@electron-forge/maker-squirrel": "^7.3.1",
+    "@electron-forge/maker-wix": "^7.3.1",
     "@electron-forge/maker-zip": "^7.3.1",
     "@electron/rebuild": "3.2.10",
     "electron": "31.7.5",
