chore: Add optional verbose test runner for db deps
Also adjust one test which made verbose mode unreadable by printing a
large data structure where an assertion should go

--- a/deps/db/package.json
+++ b/deps/db/package.json
@@ -9,6 +9,7 @@
     "better-sqlite3": "9.3.0"
   },
   "scripts": {
-    "test": "yarn nbb-logseq -cp test -m nextjournal.test-runner"
+    "test": "yarn nbb-logseq -cp test -m nextjournal.test-runner",
+    "test-v": "yarn nbb-logseq -cp test -m logseq.db.test-runner"
   }
 }
