--- a/tldraw/packages/core/package.json
+++ b/tldraw/packages/core/package.json
@@ -38,6 +38,7 @@
     "@tldraw/intersect": "2.0.0-alpha.1",
     "@tldraw/vec": "2.0.0-alpha.1",
     "@use-gesture/react": "^10.2.22",
+    "deepmerge": "^4.2.2",
     "fast-copy": "^3.0.0",
     "fast-deep-equal": "^3.1.3",
     "hotkeys-js": "^3.10.0",
