feat: init add frontend.inference-worker.text-embedding

--- a/package.json
+++ b/package.json
@@ -144,6 +144,7 @@
         "fuse.js": "6.4.6",
         "grapheme-splitter": "1.0.4",
         "graphology": "0.20.0",
+        "hnswlib-wasm": "^0.8.2",
         "html2canvas": "^1.4.1",
         "ignore": "5.1.8",
         "inter-ui": "^3.19.3",
