remove silent failing of CI jobs
Can't debug failures if we can't see their output e.g.
https://github.com/logseq/logseq/actions/runs/14252668697/job/39948918589?pr=11807

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -112,13 +112,13 @@ jobs:
         run: clojure -M:clj-kondo --parallel --lint src
 
       - name: Carve lint for unused vars
-        run: bb lint:carve 2>/dev/null
+        run: bb lint:carve
 
       - name: Lint for vars that are too large
-        run: bb lint:large-vars 2>/dev/null
+        run: bb lint:large-vars
 
       - name: Lint for namespaces that aren't documented
-        run: bb lint:ns-docstrings 2>/dev/null
+        run: bb lint:ns-docstrings
 
       - name: Lint invalid translation entries
         run: bb lang:validate-translations
