--- a/package.json
+++ b/package.json
@@ -62,7 +62,9 @@
         "css:build": "postcss tailwind.all.css -o static/css/style.css --verbose --env production",
         "css:watch": "cross-env TAILWIND_MODE=watch postcss tailwind.all.css -o static/css/style.css --verbose --watch",
         "cljs:watch": "clojure -M:cljs watch app electron",
-        "cljs:watch-storybook": "clojure -M:cljs watch stories-dev",
+        "cljs:storybook-watch": "clojure -M:cljs watch stories-dev",
+        "css:capacitor-new-watch": "cross-env TAILWIND_MODE=watch postcss tailwind.capacitor.css -o static/capacitor/style.css --verbose --watch",
+        "cljs:capacitor-new-watch": "clojure -M:cljs watch capacitor-new",
         "cljs:app-watch": "clojure -M:cljs watch app",
         "cljs:electron-watch": "clojure -M:cljs watch app electron --config-merge \"{:asset-path \\\"./js\\\"}\"",
         "cljs:release": "clojure -M:cljs release app publishing electron",
