--- a/.github/workflows/stale-issues.yml
+++ b/.github/workflows/stale-issues.yml
@@ -7,8 +7,8 @@
 ---
 name: 'Stale Issues Policy'
 on:  # yamllint disable-line rule:truthy
-  schedule:
-    - cron: '0 0 * * *'  # Run at 00:00 UTC every day
+#  schedule:
+#    - cron: '0 0 * * *'  # Run at 00:00 UTC every day
   workflow_dispatch:
 
 permissions:
