enhance(capacitor): add ionic ui

--- a/package.json
+++ b/package.json
@@ -17,10 +17,9 @@
         "del": "^6.0.0",
         "glob": "9.0.0",
         "gulp": "^4.0.2",
-        "gulp-replace": "^1.1.4",
         "gulp-postcss": "^10.0.0",
+        "gulp-replace": "^1.1.4",
         "ip": "1.1.9",
-        "semver": "7.5.2",
         "karma": "^6.4.4",
         "karma-chrome-launcher": "^3.2.0",
         "karma-cljs-test": "^0.1.0",
@@ -33,6 +32,7 @@
         "postcss-import-ext-glob": "2.0.1",
         "postcss-nested": "6.0.0",
         "purgecss": "4.0.2",
+        "semver": "7.5.2",
         "shadow-cljs": "2.26.0",
         "stylelint": "^13.8.0",
         "stylelint-config-standard": "^20.0.0",
@@ -109,6 +109,8 @@
         "@excalidraw/excalidraw": "0.16.1",
         "@glidejs/glide": "^3.6.0",
         "@highlightjs/cdn-assets": "10.4.1",
+        "@ionic/core": "^8.5.4",
+        "@ionic/react": "^8.5.4",
         "@isomorphic-git/lightning-fs": "^4.6.0",
         "@js-joda/core": "3.2.0",
         "@js-joda/locale_en-us": "3.1.1",
