chore: update clj e2e to apply on feat/db

--- a/.github/workflows/clj-e2e.yml
+++ b/.github/workflows/clj-e2e.yml
@@ -2,11 +2,11 @@ name: Clojure E2E
 
 on:
   push:
-    branches: [test/db-e2e]
+    branches: ["feat/db"]
     paths:
       - 'clj-e2e/**'
   pull_request:
-    branches: [test/db-e2e]
+    branches: ["feat/db"]
     paths:
       - 'clj-e2e/**'
 
