fix: files config for new clj-e2e workflow
Edits to the workflow itself should cause it to rerun

--- a/.github/workflows/clj-e2e.yml
+++ b/.github/workflows/clj-e2e.yml
@@ -5,10 +5,12 @@ on:
     branches: ["feat/db"]
     paths:
       - 'clj-e2e/**'
+      - '.github/workflows/clj-e2e.yml'
   pull_request:
     branches: ["feat/db"]
     paths:
       - 'clj-e2e/**'
+      - '.github/workflows/clj-e2e.yml'
 
 env:
   CLOJURE_VERSION: '1.11.1.1413'
