chore: enable clj-e2e for "every" commit
i.e. commits that affect app behavior

--- a/.github/workflows/clj-e2e.yml
+++ b/.github/workflows/clj-e2e.yml
@@ -6,11 +6,17 @@ on:
     paths:
       - 'clj-e2e/**'
       - '.github/workflows/clj-e2e.yml'
+      - src/**
+      - deps/**
+      - packages/**
   pull_request:
     branches: ["feat/db"]
     paths:
       - 'clj-e2e/**'
       - '.github/workflows/clj-e2e.yml'
+      - src/**
+      - deps/**
+      - packages/**
 
 env:
   CLOJURE_VERSION: '1.11.1.1413'
