enhance(capacitor): bootstrap & ui components

--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
         "cljs:watch": "clojure -M:cljs watch app electron",
         "cljs:storybook-watch": "clojure -M:cljs watch stories-dev",
         "gulp:capacitor-new-watch": "gulp capacitorNewWatch",
+        "css:capacitor-new-build": "postcss tailwind.capacitor.css -o static/style.css --verbose --env production",
         "css:capacitor-new-watch": "cross-env TAILWIND_MODE=watch postcss tailwind.capacitor.css -o static/capacitor/style.css --verbose --watch",
         "cljs:capacitor-new-watch": "clojure -M:cljs watch capacitor-new",
         "cljs:app-watch": "clojure -M:cljs watch app",
