--- a/resources/package.json
+++ b/resources/package.json
@@ -21,7 +21,7 @@
     "forge": "./forge.config.js"
   },
   "dependencies": {
-    "@fastify/cors": "8.2.0",
+    "@fastify/cors": "11.0.1",
     "@logseq/rsapi": "0.0.91",
     "@sentry/electron": "2.5.1",
     "abort-controller": "3.0.0",
@@ -29,14 +29,14 @@
     "chokidar": "^3.5.1",
     "command-exists": "1.2.9",
     "diff-match-patch": "1.0.5",
-    "dugite": "2.5.1",
+    "dugite": "2.7.1",
     "electron-deeplink": "1.0.10",
     "electron-dl": "3.3.0",
     "electron-log": "4.3.1",
     "electron-squirrel-startup": "1.0.0",
     "electron-window-state": "5.0.3",
     "extract-zip": "2.0.1",
-    "fastify": "latest",
+    "fastify": "5.3.2",
     "fs-extra": "9.1.0",
     "https-proxy-agent": "7.0.2",
     "node-fetch": "2.6.7",
