enhance(capacitor): basic layout

--- a/android/app/capacitor.build.gradle
+++ b/android/app/capacitor.build.gradle
@@ -24,6 +24,7 @@ dependencies {
     implementation project(':logseq-capacitor-file-sync')
     implementation project(':capacitor-voice-recorder')
     implementation project(':send-intent')
+    implementation project(':jcesarmobile-ssl-skip')
 
 }
 
