enhance(dev): cljs tests can run with or without repeatable idents

--- a/.github/workflows/graph-parser.yml
+++ b/.github/workflows/graph-parser.yml
@@ -76,7 +76,7 @@ jobs:
         run: yarn install --frozen-lockfile
 
       - name: Run ClojureScript tests
-        run: clojure -M:test
+        run: REPEATABLE_IDENTS=true clojure -M:test
 
       - name: Run nbb-logseq tests
         run: yarn test
