chore: set clj-e2e tests timeout to 30m

--- a/.github/workflows/clj-e2e.yml
+++ b/.github/workflows/clj-e2e.yml
@@ -83,10 +83,10 @@ jobs:
           ls -lR ./public
 
       - name: Run e2e tests
-        run: cd clj-e2e && bb dev
+        run: cd clj-e2e && timeout 30m bb dev
         env:
           DEBUG: "pw:api"
-          
+
       - name: Collect screenshots
         if: ${{ failure() }}
         uses: actions/upload-artifact@v4
