--- a/resources/package.json
+++ b/resources/package.json
@@ -14,7 +14,7 @@
     "electron:make-linux-arm64": "electron-forge make --platform=linux --arch=arm64",
     "electron:make-macos-arm64": "electron-forge make --platform=darwin --arch=arm64",
     "electron:publish:github": "electron-forge publish",
-    "rebuild:all": "electron-rebuild -v 36.2.0 -f",
+    "rebuild:all": "electron-rebuild -v 35.2.2 -f",
     "postinstall": "install-app-deps"
   },
   "config": {
@@ -25,7 +25,7 @@
     "@logseq/rsapi": "0.0.91",
     "@sentry/electron": "2.5.1",
     "abort-controller": "3.0.0",
-    "better-sqlite3": "^11.10.0",
+    "better-sqlite3": "11.9.1",
     "chokidar": "^3.5.1",
     "command-exists": "1.2.9",
     "diff-match-patch": "1.0.5",
@@ -55,12 +55,12 @@
     "@electron-forge/maker-squirrel": "^7.8.0",
     "@electron-forge/maker-zip": "^7.8.0",
     "@electron/rebuild": "4.0.1",
-    "electron": "36.2.0",
+    "electron": "35.2.2",
     "electron-builder": "26.0.12",
     "electron-forge-maker-appimage": "https://github.com/logseq/electron-forge-maker-appimage.git"
   },
   "resolutions": {
-    "**/electron": "36.2.0",
+    "**/electron": "35.2.2",
     "**/node-abi": "3.75.0",
     "**/node-gyp": "11.1.0",
     "string-width": "4.2.0",
