--- a/.github/workflows/logseq-common.yml
+++ b/.github/workflows/logseq-common.yml
@@ -3,7 +3,7 @@ name: logseq/common CI
 on:
   # Path filters ensure jobs only kick off if a change is made to common
   push:
-    branches: [master]
+    branches: [master, "feat/db"]
     paths:
       - 'deps/common/**'
       - '.github/workflows/logseq-common.yml'
