--- a/.github/workflows/clj-rtc-e2e.yml
+++ b/.github/workflows/clj-rtc-e2e.yml
@@ -86,7 +86,7 @@ jobs:
       - name: Run e2e tests
         run: cd clj-e2e && timeout 30m bb run-rtc-extra-test
         env:
-          DEBUG: "pw:api"
+          # DEBUG: "pw:api"
 
       - name: Collect screenshots
         if: ${{ failure() }}
