--- a/.github/workflows/clj-e2e.yml
+++ b/.github/workflows/clj-e2e.yml
@@ -84,8 +84,8 @@ jobs:
 
       - name: Run e2e tests
         run: cd clj-e2e && timeout 30m bb dev
-        env:
-          DEBUG: "pw:api"
+        # env:
+        #   DEBUG: "pw:api"
 
       - name: Collect screenshots
         if: ${{ failure() }}
