--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
         "watch": "run-p gulp:watch cljs:watch",
         "electron-watch": "run-p gulp:watch cljs:electron-watch",
         "app-watch": "run-p gulp:watch cljs:app-watch",
+        "dev": "run-p gulp:watch gulp:capacitor-new-watch cljs:dev-watch",
         "release": "run-s gulp:build cljs:release",
         "release-app": "run-s gulp:build cljs:release-app",
         "dev-release-app": "run-s gulp:build cljs:dev-release-app",
@@ -71,6 +72,7 @@
         "css:capacitor-new-build": "postcss tailwind.capacitor.css -o static/style.css --verbose --env production",
         "css:capacitor-new-watch": "cross-env TAILWIND_MODE=watch postcss tailwind.capacitor.css -o static/capacitor/style.css --verbose --watch",
         "cljs:capacitor-new-watch": "clojure -M:cljs watch capacitor-new",
+        "cljs:dev-watch": "clojure -M:cljs watch app electron capacitor-new",
         "cljs:app-watch": "clojure -M:cljs watch app",
         "cljs:electron-watch": "clojure -M:cljs watch app electron --config-merge \"{:asset-path \\\"./js\\\"}\"",
         "cljs:release": "clojure -M:cljs release app publishing electron",
