chore(capacitor): release scripts

--- a/package.json
+++ b/package.json
@@ -51,27 +51,30 @@
         "dev": "run-p gulp:watch gulp:capacitor-new-watch cljs:dev-watch",
         "release": "run-s gulp:build cljs:release",
         "release-app": "run-s gulp:build cljs:release-app",
+        "release-capacitor-new": "run-s gulp:buildCapacitorNew cljs:release-capacitor-new",
         "dev-release-app": "run-s gulp:build cljs:dev-release-app",
         "dev-electron-app": "gulp electron",
         "release-electron": "run-s gulp:build && gulp electronMaker",
         "debug-electron": "cd static/ && yarn electron:debug",
         "e2e-test": "cross-env DEBUG=pw:api CI=true npx playwright test --reporter github",
-        "run-android-release": "yarn clean && yarn release-app && rm -rf ./public/static && rm -rf ./static/js/*.map && mv static ./public && npx cap sync android && npx cap run android",
-        "run-ios-release": "yarn clean && yarn release-app && rm -rf ./public/static && rm -rf ./static/js/*.map && mv static ./public && npx cap sync ios && npx cap run ios",
+        "sync-android-release": "yarn clean && yarn release-capacitor-new && rm -rf ./static/capacitor/**/*.map && npx cap sync android",
+        "sync-ios-release": "yarn clean && yarn release-capacitor-new && rm -rf ./static/capacitor/**/*.map && npx cap sync ios",
         "clean": "gulp clean",
         "test": "run-s cljs:test cljs:run-test",
         "report": "run-s cljs:report",
         "style:lint": "stylelint \"src/**/*.css\"",
         "gulp:watch": "gulp watch",
         "gulp:build": "cross-env NODE_ENV=production gulp build",
+        "gulp:buildCapacitorNew": "cross-env NODE_ENV=production gulp buildCapacitorNew",
         "css:build": "postcss tailwind.all.css -o static/css/style.css --verbose --env production",
         "css:watch": "cross-env TAILWIND_MODE=watch postcss tailwind.all.css -o static/css/style.css --verbose --watch",
         "cljs:watch": "clojure -M:cljs watch app electron",
         "cljs:storybook-watch": "clojure -M:cljs watch stories-dev",
-        "gulp:capacitor-new-watch": "gulp capacitorNewWatch",
-        "css:capacitor-new-build": "postcss tailwind.capacitor.css -o static/style.css --verbose --env production",
+        "gulp:capacitor-new-watch": "gulp watchCapacitorNew",
+        "css:capacitor-new-build": "postcss tailwind.capacitor.css -o static/capacitor/style.css --verbose --env production",
         "css:capacitor-new-watch": "cross-env TAILWIND_MODE=watch postcss tailwind.capacitor.css -o static/capacitor/style.css --verbose --watch",
         "cljs:capacitor-new-watch": "clojure -M:cljs watch capacitor-new",
+        "cljs:release-capacitor-new": "clojure -M:cljs release capacitor-new",
         "cljs:dev-watch": "clojure -M:cljs watch app electron capacitor-new",
         "cljs:app-watch": "clojure -M:cljs watch app",
         "cljs:electron-watch": "clojure -M:cljs watch app electron --config-merge \"{:asset-path \\\"./js\\\"}\"",
