--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,6 +2,10 @@ name: CI
 
 on:
   push:
+    branches: [master]
+    paths-ignore:
+      - '*.md'
+  pull_request:
     branches: [master, "feat/db"]
     paths-ignore:
       - '*.md'
