--- a/.github/workflows/clj-e2e.yml
+++ b/.github/workflows/clj-e2e.yml
@@ -2,6 +2,14 @@ name: Clojure E2E
 
 on:
   push:
+    branches: [master]
+    paths:
+      - 'clj-e2e/**'
+      - '.github/workflows/clj-e2e.yml'
+      - src/**
+      - deps/**
+      - packages/**
+  pull_request:
     branches: [master, "feat/db"]
     paths:
       - 'clj-e2e/**'
