--- a/.github/workflows/db.yml
+++ b/.github/workflows/db.yml
@@ -3,6 +3,12 @@ name: logseq/db CI
 on:
   # Path filters ensure jobs only kick off if a change is made to db
   push:
+    branches: [master]
+    paths:
+      - 'deps/db/**'
+      - '.github/workflows/db.yml'
+      - '!deps/db/**.md'
+  pull_request:
     branches: [master, "feat/db"]
     paths:
       - 'deps/db/**'
