--- a/.github/workflows/logseq-common.yml
+++ b/.github/workflows/logseq-common.yml
@@ -3,6 +3,12 @@ name: logseq/common CI
 on:
   # Path filters ensure jobs only kick off if a change is made to common
   push:
+    branches: [master]
+    paths:
+      - 'deps/common/**'
+      - '.github/workflows/logseq-common.yml'
+      - '!deps/common/**.md'
+  pull_request:
     branches: [master, "feat/db"]
     paths:
       - 'deps/common/**'
