--- a/.github/workflows/outliner.yml
+++ b/.github/workflows/outliner.yml
@@ -4,10 +4,17 @@ on:
   # Path filters ensure jobs only kick off if a change is made to outliner or
   # its local dependencies
   push:
-    branches: [master, "feat/db"]
+    branches: [master]
     paths:
       - 'deps/outliner/**'
       # db is a local dep that could break functionality in this lib and should trigger this
+      - 'deps/db/**'
+      - '.github/workflows/outliner.yml'
+      - '!deps/outliner/**.md'
+  pull_request:
+    branches: [master, "feat/db"]
+    paths:
+      - 'deps/outliner/**'
       - 'deps/db/**'
       - '.github/workflows/outliner.yml'
       - '!deps/outliner/**.md'
