chore: disable e2e.yml, now using clj-e2e.yml

--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -24,6 +24,7 @@ env:
 
 jobs:
   e2e-test-build:
+    if: false                   # disabled
     name: Build Test Artifact
     runs-on: ubuntu-22.04
     steps:
