--- a/.github/workflows/clj-rtc-e2e.yml
+++ b/.github/workflows/clj-rtc-e2e.yml
@@ -2,7 +2,7 @@ name: Clojure RTC E2E
 
 on:
   push:
-    branches: [master, "feat/db"]
+    branches: [master]
     paths:
       - 'clj-e2e/**'
       - '.github/workflows/clj-rtc-e2e.yml'
@@ -10,7 +10,7 @@ on:
       - deps/**
       - packages/**
   pull_request:
-    branches: [master, "feat/db"]
+    branches: [master]
     paths:
       - 'clj-e2e/**'
       - '.github/workflows/clj-rtc-e2e.yml'
