--- a/.github/workflows/logseq-common.yml
+++ b/.github/workflows/logseq-common.yml
@@ -9,7 +9,7 @@ on:
       - '.github/workflows/logseq-common.yml'
       - '!deps/common/**.md'
   pull_request:
-    branches: [master, "feat/db"]
+    branches: [master]
     paths:
       - 'deps/common/**'
       - '.github/workflows/logseq-common.yml'
