--- a/.github/workflows/publishing.yml
+++ b/.github/workflows/publishing.yml
@@ -12,7 +12,7 @@ on:
       - '.github/workflows/publishing.yml'
       - '!deps/publishing/**.md'
   pull_request:
-    branches: [master, "feat/db"]
+    branches: [master]
     paths:
       - 'deps/publishing/**'
       - 'deps/db/**'
