--- a/.github/workflows/build-ios.yml
+++ b/.github/workflows/build-ios.yml
@@ -72,7 +72,7 @@ jobs:
         run: yarn install && yarn release-app
 
       - name: Sync static build files
-        run: rsync -avz --exclude node_modules --exclude '*.js.map' --exclude android ./static/ ./public/static/
+        run: rsync -avz --exclude node_modules --exclude '*.js.map' --exclude android ./static/ ./public/
 
       - name: Prepare iOS build
         run: npx cap sync ios
