--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -129,10 +129,10 @@ jobs:
       - name: Prepare public Directory
         run: |
           cp -r static public/
-          rm -rvf public/static/js/publishing
-          rm -rvf public/static/js/*.js.map || true
-          rm -rvf public/static/*.*
-          rm -rvf public/static/ios
+          rm -rvf public/js/publishing
+          rm -rvf public/js/*.js.map || true
+          rm -rvf public/*.*
+          rm -rvf public/ios
           rm -rvf android/app/src/main/assets/public || true
 
       - name: Sync public to Android Project
