fix: ensure website build doesn't rely on new mobile components
this commit also removes js e2e-tests

--- a/.gitignore
+++ b/.gitignore
@@ -60,8 +60,7 @@ startup.png
 android/app/src/main/assets/capacitor.config.json
 
 *.sublime-*
-/public/static
-/public/
+/public
 .yarn/
 .yarnrc.yml
 
