--- a/.github/workflows/build-ios.yml
+++ b/.github/workflows/build-ios.yml
@@ -69,10 +69,7 @@ jobs:
           echo "ENABLE_FILE_SYNC_PRODUCTION=true" >> $GITHUB_ENV
 
       - name: Compile CLJS
-        run: yarn install && yarn release-app
-
-      - name: Sync static build files
-        run: rsync -avz --exclude node_modules --exclude '*.js.map' --exclude android ./static/ ./public/
+        run: yarn install && yarn release-mobile
 
       - name: Prepare iOS build
         run: npx cap sync ios
