--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -7,7 +7,8 @@
     "watch:ui:examples": "parcel serve ./examples/index.html",
     "build:ui:only": "parcel build --target ui",
     "build:ionic:only": "parcel build --target ionic",
-    "build:ui": "rm -rf .parcel-cache && yarn build:ui:only && yarn build:ionic:only",
+    "build:silkhq:only": "parcel build --target silkhq",
+    "build:ui": "rm -rf .parcel-cache && yarn build:ui:only && yarn build:ionic:only && yarn build:silkhq:only",
     "watch:storybook": "storybook dev -p 6006",
     "postinstall": "yarn build:ui"
   },
@@ -34,6 +35,7 @@
     "@radix-ui/react-toggle-group": "^1.1.7",
     "@radix-ui/react-tooltip": "^1.2.4",
     "@ionic/react": "8.5.7",
+    "@silk-hq/components": "^0.9.10",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
@@ -102,6 +104,14 @@
     },
     "ionic": {
       "source": "src/ionic.ts",
+      "outputFormat": "global",
+      "includeNodeModules": {
+        "react": false,
+        "react-dom": false
+      }
+    },
+    "silkhq": {
+      "source": "src/silkhq/silkhq.ts",
       "outputFormat": "global",
       "includeNodeModules": {
         "react": false,
