fix: remove references to nonexistent static/yarn.lock
File was removed in #11903. Also remove publishing script
that has been unused for some time

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,9 +45,7 @@ jobs:
         with:
           node-version: ${{ env.NODE_VERSION }}
           cache: 'yarn'
-          cache-dependency-path: |
-            yarn.lock
-            static/yarn.lock
+          cache-dependency-path: yarn.lock
 
       - name: Set up Java
         uses: actions/setup-java@v3
