fix: some pdf annotations weren't imported
. Creation of edn+md paths from pdf path were lacking sanitization which
resulted in edn and md files not being associated with pdf

Fixes https://github.com/logseq/db-test/issues/196#issuecomment-3059363947.
Also fix incorrect dep

--- a/deps/graph-parser/package.json
+++ b/deps/graph-parser/package.json
@@ -7,7 +7,8 @@
     "better-sqlite3": "11.10.0"
   },
   "dependencies": {
-    "mldoc": "^1.5.9"
+    "mldoc": "^1.5.9",
+    "sanitize-filename": "1.6.3"
   },
   "scripts": {
     "test": "nbb-logseq -cp test:../outliner/src -m nextjournal.test-runner",
