enhance: search cmd highlights search term and
allows for user specified limit of results.
Also enabled nbb-logseq tests for cli since first
test was introduced

--- a/.github/workflows/cli.yml
+++ b/.github/workflows/cli.yml
@@ -69,6 +69,9 @@ jobs:
       - name: Fetch yarn deps
         run: yarn install --frozen-lockfile
 
+      - name: Run nbb-logseq tests
+        run: yarn test
+
       # In this job because it depends on an npm package
       - name: Load namespaces into nbb-logseq
         run: bb test:load-all-namespaces-with-nbb .
@@ -93,7 +96,7 @@ jobs:
           bb: ${{ env.BABASHKA_VERSION }}
 
       - name: Run clj-kondo lint
-        run: clojure -M:clj-kondo --lint src
+        run: clojure -M:clj-kondo --lint src test
 
       - name: Carve lint for unused vars
         run: bb lint:carve
