--- a/deps/cli/package.json
+++ b/deps/cli/package.json
@@ -10,5 +10,8 @@
     "@logseq/nbb-logseq": "logseq/nbb-logseq#feat-db-v24",
     "better-sqlite3": "11.10.0",
     "fs-extra": "^11.3.0"
+  },
+  "scripts": {
+    "test": "yarn nbb-logseq -cp test -m nextjournal.test-runner"
   }
 }
