--- a/deps/cli/package.json
+++ b/deps/cli/package.json
@@ -5,6 +5,9 @@
   "bin": {
     "logseq": "cli.mjs"
   },
+  "engines": {
+    "node": ">=22.17.0"
+  },
   "license": "MIT",
   "dependencies": {
     "@logseq/nbb-logseq": "logseq/nbb-logseq#feat-db-v24",
